modification bouton et scss avec images

--- a/myApp/src/app/Page/Page_Recettes/bar/bar.page.html
+++ b/myApp/src/app/Page/Page_Recettes/bar/bar.page.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Bar</ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content>
+  <div>
+    <h1 style="text-align:center;">Bar</h1>
+    <ion-img src="../../assets/Recettes/barRecette.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
 
+  </div>
 </ion-content>
