--- a/myApp/src/app/Page/Page_Recettes/st-jacques/st-jacques.page.html
+++ b/myApp/src/app/Page/Page_Recettes/st-jacques/st-jacques.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>stJacques</ion-title>
+    <ion-title>St Jacques</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div>
+    <h1 style="text-align:center;">Saint jacques</h1>
+    <ion-img src="../../assets/Recettes/saintJacques.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
 
+  </div>
 </ion-content>
