--- a/myApp/src/app/Page/Page_Recettes/tourteau/tourteau.page.html
+++ b/myApp/src/app/Page/Page_Recettes/tourteau/tourteau.page.html
@@ -5,5 +5,9 @@
 </ion-header>
 
 <ion-content>
+  <div>
+    <h1 style="text-align:center;">Tourteau</h1>
+    <ion-img src="../../assets/Recettes/poulpe@3x.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
 
+  </div>
 </ion-content>
