--- a/myApp/src/app/Page/Page_Restaurants/villa9-trois/villa9-trois.page.html
+++ b/myApp/src/app/Page/Page_Restaurants/villa9-trois/villa9-trois.page.html
@@ -4,8 +4,8 @@
 
 <ion-content>
   <div>
-    <h1 style="text-align:center;">Bistrot Landais</h1>
-    <ion-img src="../../assets/Restaurants/bistrotLandais.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
+    <h1 style="text-align:center;">Villa 9 trois</h1>
+    <ion-img src="../../assets/Restaurants/villa9Trois.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
     <div style="text-align: center;">
       <p>Qu'il est chaud le soleil</p>
       <p>Quand nous sommes en vaccances</p>
