--- a/myApp/src/app/restaurant/restaurant.page.html
+++ b/myApp/src/app/restaurant/restaurant.page.html
@@ -24,6 +24,9 @@
     </ion-row>
     <ion-row>
       <ion-col>
+        <ion-button routerLink="/villa9-trois">Villa 9 trois</ion-button>
+      </ion-col>
+      <ion-col>
         <ion-button>Devenez partenaire !</ion-button>
       </ion-col>
     </ion-row>
