--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -3,6 +3,10 @@
 
 /** Ionic CSS Variables **/
 :root {
+  ion-content{
+    --background: url(../assets/backgroundim.png)
+
+  }
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -74,7 +78,6 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
-
 }
 
 @media (prefers-color-scheme: dark) {
