--- a/myApp/src/app/Page/Page_Restaurants/bisrtot-du-sommelier/bisrtot-du-sommelier.page.html
+++ b/myApp/src/app/Page/Page_Restaurants/bisrtot-du-sommelier/bisrtot-du-sommelier.page.html
@@ -1,9 +1,22 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>BisrtotDuSommelier</ion-title>
-  </ion-toolbar>
+  
 </ion-header>
 
 <ion-content>
-
+  <div>
+    <h1 style="text-align:center;">Bistrot du Sommelier</h1>
+    <ion-img src="../../assets/Restaurants/duSommelier.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
+    <div style="text-align: center;">
+      <p>Qu'il est chaud le soleil</p>
+      <p>Quand nous sommes en vaccances</p>
+      <p>Y a d'la joie, des hirondelles</p>
+      <p>C'est le sud de la France</p>
+      <p>Papa bricole au garage</p>
+      <p>Maman lit dans la chaise longue</p>
+      <p>Dans ce joli paysage</p>
+      <p>Moi, je me balade en tongs</p>
+      <p>Que du bonheur!</p>
+      <p>Que du bonheur!</p>
+    </div>
+  </div>
 </ion-content>
