--- a/myApp/src/app/Page/Page_Restaurants/bistrot-des-gascons/bistrot-des-gascons.page.html
+++ b/myApp/src/app/Page/Page_Restaurants/bistrot-des-gascons/bistrot-des-gascons.page.html
@@ -1,9 +1,21 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>BistrotDesGascons</ion-title>
-  </ion-toolbar>
+  
 </ion-header>
-
 <ion-content>
-
+  <div>
+    <h1 style="text-align:center;">Bistrot des Gascons</h1>
+    <ion-img src="../../assets/Restaurants/desGascons.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
+    <div style="text-align: center;">
+      <p>Qu'il est chaud le soleil</p>
+      <p>Quand nous sommes en vaccances</p>
+      <p>Y a d'la joie, des hirondelles</p>
+      <p>C'est le sud de la France</p>
+      <p>Papa bricole au garage</p>
+      <p>Maman lit dans la chaise longue</p>
+      <p>Dans ce joli paysage</p>
+      <p>Moi, je me balade en tongs</p>
+      <p>Que du bonheur!</p>
+      <p>Que du bonheur!</p>
+    </div>
+  </div>
 </ion-content>
