ajout de page produit avec ces pages composantes

--- a/myApp/src/app/produit/produit.page.html
+++ b/myApp/src/app/produit/produit.page.html
@@ -1,9 +1,28 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Produit</ion-title>
-  </ion-toolbar>
+  
 </ion-header>
 
 <ion-content>
 
+
+  <ion-button routerLink="/poisson">
+    <div id="text">
+      Poisson
+    </div>
+  </ion-button>
+  <ion-button>
+    <div id="text">
+      Coquillages
+    </div>
+  </ion-button>
+  <ion-button>
+    <div id="text">
+      Crustacés
+    </div>
+  </ion-button>
+  <ion-button>
+    <div id="text">
+      Promotion
+    </div>
+  </ion-button>
 </ion-content>
