--- a/myApp/src/app/produit/produit.page.scss
+++ b/myApp/src/app/produit/produit.page.scss
@@ -13,6 +13,15 @@ ion-button{
 
 }
 
+#bouton{
+    background-color: black;
+}
+
 #text{
     margin-left: 20px;
+}
+
+#head{
+    height:100px;
+    background-color:black;
 }
