--- a/myApp/src/app/panier/panier.page.html
+++ b/myApp/src/app/panier/panier.page.html
@@ -1,5 +1,4 @@
 <ion-header>
-
 </ion-header>
 
 <ion-content>
@@ -17,7 +16,7 @@
         </ion-col>
 
         <ion-col>
-          <img class="image" src="../../assets/navbarbg.png">
+          <img class="image" src="../../assets/navbarbg.png" height="100%">
         </ion-col>
 
         <ion-col>
@@ -30,9 +29,7 @@
       </ion-row>
     </ion-grid>
   </div>
-
-  <h1>Crustacés</h1>
-  <ion-button *ngFor="let i of liste" (click)="add(i)">
+  <ion-button *ngFor="let i of listePanier">
     <ion-grid>
       <ion-row>
         <ion-col >
@@ -52,7 +49,5 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-  
-  
   </ion-button>
 </ion-content>
