--- a/myApp/src/app/Page/Page_Bateaux/saphir/saphir.page.html
+++ b/myApp/src/app/Page/Page_Bateaux/saphir/saphir.page.html
@@ -1,13 +1,20 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Saphir</ion-title>
-  </ion-toolbar>
+  
 </ion-header>
-
 <ion-content>
-  <div>
-    <h1 style="text-align:center;">Saphir</h1>
-    <ion-img src="../../assets/Bateaux/saphir.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
+  <div id="contenue">
+    <h1>Saphir</h1>
+    <ion-img src="../../assets/Bateaux/saphir.png" ></ion-img>
+    <p>Qu'il est chaud le soleil<br>Quand nous sommes en vaccances
+      <br>Y a d'la joie, des hirondelles
+      <br>C'est le sud de la France
+      <br>Papa bricole au garage
+      <br>Maman lit dans la chaise longue
+      <br>Dans ce joli paysage
+      <br>Moi, je me balade en tongs
+      <br><br>Que du bonheur!
+      <br>Que du bonheur!
+    </p>
 
   </div>
 </ion-content>
