--- a/myApp/src/app/Page/Page_Restaurants/les-fous-de-lile/les-fous-de-lile.page.html
+++ b/myApp/src/app/Page/Page_Restaurants/les-fous-de-lile/les-fous-de-lile.page.html
@@ -1,22 +1,20 @@
 <ion-header>
   
 </ion-header>
-
 <ion-content>
-  <div>
-    <h1 style="text-align:center;">Les fous de l'île</h1>
-    <ion-img src="../../assets/Restaurants/fousDeLile.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
-    <div style="text-align: center;">
-      <p>Qu'il est chaud le soleil</p>
-      <p>Quand nous sommes en vaccances</p>
-      <p>Y a d'la joie, des hirondelles</p>
-      <p>C'est le sud de la France</p>
-      <p>Papa bricole au garage</p>
-      <p>Maman lit dans la chaise longue</p>
-      <p>Dans ce joli paysage</p>
-      <p>Moi, je me balade en tongs</p>
-      <p>Que du bonheur!</p>
-      <p>Que du bonheur!</p>
-    </div>
+  <div id="contenue">
+    <h1>Les fous de l'île </h1>
+    <ion-img src="../../assets/Restaurants/fousDeLIle.png" ></ion-img>
+    <p>Qu'il est chaud le soleil<br>Quand nous sommes en vaccances
+      <br>Y a d'la joie, des hirondelles
+      <br>C'est le sud de la France
+      <br>Papa bricole au garage
+      <br>Maman lit dans la chaise longue
+      <br>Dans ce joli paysage
+      <br>Moi, je me balade en tongs
+      <br><br>Que du bonheur!
+      <br>Que du bonheur!
+    </p>
+
   </div>
 </ion-content>
