--- a/myApp/src/app/recette/recette.page.html
+++ b/myApp/src/app/recette/recette.page.html
@@ -1,23 +1,20 @@
 <ion-content [fullscreen]="true">
-  <div style="text-align: center;">
-    <h1>Nos recettes</h1>
-    <p>Toutes les recettes du bateau de Thibault.</p>
-    <p>06.63.99.99.78</p>
-    <p>lebateaudethibault@gmail.com</p>
-    <p>www.facebook.com/lebateaudethibault</p>
+  <div id="paragraphe">
+    <h1>Restaurants partenaire</h1>
+    <strong>Tous ls restaurants partenaire avec le bateau de Thibault.</strong>
+    <p>06.63.99.99.78<br>lebateaudethibault@gmail.com<br>www.facebook/lebateaudethibault.com</p>
   </div>
-
 
   <ion-grid>
     <ion-row>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/homard">
           <img src="../../assets/logo/homardRecette_icon.png" height="75%">
           <div id="text">
             Homard
           </div></ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/st-jacques">
           <img  src="../../assets/logo/saintJacques_icon.png" height="75%">
           <div id="text">
@@ -27,7 +24,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/bar">
           <img  src="../../assets/logo/barRecette_icon.png" height="75%">
           <div id="text">
@@ -35,7 +32,7 @@
           </div>
         </ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/tourteau">
           <img  src="../../assets/logo/poulpe.png" height="75%">
           <div id="text">
@@ -45,16 +42,16 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>
-        <ion-button>
+      <ion-col size="6">
+        <ion-button routerLink="/recettexyz">
           <img  src="../../assets/logo/poulpe.png" height="75%">
           <div id="text">
             Recette
           </div>
         </ion-button>
       </ion-col>
-      <ion-col>
-        <ion-button>
+      <ion-col size="6">
+        <ion-button routerLink= "/recettexyz">
           <img  src="../../assets/logo/poulpe.png" height="75%">
           <div id="text">
             Recette
