--- a/myApp/src/app/restaurant/restaurant.page.html
+++ b/myApp/src/app/restaurant/restaurant.page.html
@@ -1,32 +1,38 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>{{titre}}</ion-title>
-  </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div id="texte">
+    <h1>Restaurants partenaire</h1>
+    <strong>Tous ls restaurants partenaire avec le bateau de Thibault.</strong>
+    <p>06.63.99.99.78<br>lebateaudethibault@gmail.com<br>www.facebook/lebateaudethibault.com</p>
+  </div>
+
   <ion-grid>
+
     <ion-row>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/bistrot-des-gascons">Bistrot des Gascons</ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/les-fous-de-lile">Les fous de l'île</ion-button>
       </ion-col>
     </ion-row>
+
     <ion-row>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/bistrot-landains">Bistrot Landais</ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/bisrtot-du-sommelier">Bistrot du Sommelier</ion-button>
       </ion-col>
     </ion-row>
+    
     <ion-row>
-      <ion-col>
+      <ion-col size="6">
         <ion-button routerLink="/villa9-trois">Villa 9 trois</ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="6">
         <ion-button>Devenez partenaire !</ion-button>
       </ion-col>
     </ion-row>
