--- a/myApp/src/app/Page/Page_Recettes/bar/bar.page.html
+++ b/myApp/src/app/Page/Page_Recettes/bar/bar.page.html
@@ -1,9 +1,14 @@
 
-
+<ion-header>
+  
+</ion-header>
 <ion-content>
-  <div>
-    <h1 style="text-align:center;">Bar</h1>
-    <ion-img src="../../assets/Recettes/barRecette.png" style="width:500px;height:500px;margin-left:30%;"></ion-img>
+  <div id="contenue">
+    <h1>Bar rôti au laurier frais</h1>
+    <ion-img src="../../assets/Recettes/barRecette.png" ></ion-img>
+    <p>Sur une plaque ou un plat allan au four, disposer quelques feuiles de laurier frais, verser un filet d'huie d'olive et du gros sel. Disposer le bar, puis l'arroser d'un filet d'huile d'olive et mettre un peu de gros sel sur la peau
+      <br><br>Cure au four pendant 12 min à 240°C
+    </p>
 
   </div>
 </ion-content>
