--- a/myApp/src/app/home/home.page.scss
+++ b/myApp/src/app/home/home.page.scss
@@ -1,18 +1,63 @@
+
+
 #conteneur{
     text-align: center;
+  
 }
+
+#container strong {
+    font-size: 12px;
+    font-style: italic;
+    color: #000000;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 20%;
+  }
+#container h1{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 5%;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    font-style: italic;
+}
+
+#container p {
+    font-size: 12px;
+    font-style: italic;
+    color: #000000;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 30%;
+  }
+  
 ion-button{
     color:white;
     --background: black;
     --opacity:0.4;
-    height:100px;
+    height:60px;
     width:100%;
     --border-style:solid;
     --border-color:black;
     --border-radius:none;
-
+    font-size: 11px;
 }
 
 #text{
-    margin-left: 20px;
+    margin-left: 10px;
 }
+
+#container3 {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    align-self: center;
+  }
+
+  
