--- a/myApp/src/app/recette/recette.page.scss
+++ b/myApp/src/app/recette/recette.page.scss
@@ -1,15 +1,57 @@
 ion-button{
     color:white;
     --background: black;
-    --opacity:0.5;
-    height:100px;
+    --opacity:0.4;
+    height:70px;
     width:100%;
     --border-style:solid;
     --border-color:black;
     --border-radius:none;
+    font-size: 11px;
+}
 
+#paragraphe{
+    text-align: center;
+}
+
+#paragraphe h1{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 5%;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    font-style: italic;
+}
+
+#paragraphe strong {
+    font-size: 12px;
+    font-style: italic;
+    color: #000000;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 20%;
+  }
+
+#paragraphe p{
+    font-size: 12px;
+    font-style: italic;
+    color: #000000;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 30%;
+}
+
+ion-grid{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 45%;
 }
 
 #text{
-    margin-left: 20px;
+    margin-left: 10px;
 }
