CSS BOUTON PRODUIT

--- a/myApp/src/app/bateau/bateau.page.html
+++ b/myApp/src/app/bateau/bateau.page.html
@@ -45,7 +45,7 @@
 
     <ion-row>
       <ion-col size="12">
-        <ion-button><img  src="../../assets/logo/ancre.png" height="75%">
+        <ion-button routerLink="/contact"><img  src="../../assets/logo/ancre.png" height="75%">
           <div id="text">
             Contactez-nous
           </div>
