--- a/myApp/src/app/ListeProduit/crustace/crustace.page.html
+++ b/myApp/src/app/ListeProduit/crustace/crustace.page.html
@@ -8,7 +8,8 @@
       <ion-row>
 
         <ion-col size=3>
-      
+        
+            <!--<img class="imageHome" src="../../assets/homeLogo.png">-->
             <button id="bouton" routerLink="/home" style="background-color: black;">
               <img class="imageHome" src="../../assets/homeLogo.png" width=60/>
             </button>
@@ -22,7 +23,7 @@
         </ion-col>
 
         <ion-col size=3>
-
+          <!--<img class="imageCart" src="../../assets/cartLogo.png">-->
           <button id="bouton" routerLink="/panier" style="float: right;" style="background-color: black;
           float: right;">
             <img class="imageCart" src="../../assets/cartLogo.png" width=60/>
@@ -33,27 +34,25 @@
     </ion-grid>
   </div>
 
-  <ion-button routerLink="/poisson">
-    <div id="text">
-      Poisson
-    </div>
-  </ion-button>
+  <h1>Crustacés</h1>
 
-  <ion-button routerLink="/coquillage">
-    <div id="text">
-      Coquillages
-    </div>
-  </ion-button>
 
-  <ion-button routerLink="/crustace">
-    <div id="text">
-      Crustacés
-    </div>
-  </ion-button>
 
-  <ion-button routerLink="/promotion">
-    <div id="text">
-      Promotion
-    </div>
+  <ion-button *ngFor="let i of liste" (click)="add(i)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="3">
+          <img src="../../../assets/logo/poulpe.png" width=50/>
+        </ion-col>
+        <ion-col size="8" style="word-wrap: break-word;">
+            {{i.name}}
+        </ion-col>
+        <ion-col size="1">
+            {{i.price}}€
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  
+  
   </ion-button>
 </ion-content>
