--- a/myApp/src/app/home/home.page.html
+++ b/myApp/src/app/home/home.page.html
@@ -28,8 +28,8 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>
-        <ion-button size="6" expand='full' [routerLink]="['/bateau']">
+      <ion-col size="6">
+        <ion-button expand='full' [routerLink]="['/bateau']">
           <img  src="../../assets/logo/ancre.png" height="75%">
           <div id="text">
             Bateaux
@@ -37,8 +37,8 @@
         </ion-button>
         
       </ion-col>
-      <ion-col>
-        <ion-button size="6" expand='full' [routerLink]="['/restaurant']">
+      <ion-col size="6">
+        <ion-button expand='full' [routerLink]="['/restaurant']">
           <img  src="../../assets/logo/restaurant.png" height="75%">
           <div id="text">
             Restaurants
