suppression de fichiers inutiles

--- a/myApp/src/app/Page/Page_Recettes/homard/homard.page.html
+++ b/myApp/src/app/Page/Page_Recettes/homard/homard.page.html
@@ -7,7 +7,7 @@
     <h1>Homard en chaud-froid</h1>
     <ion-img src="../../assets/Recettes/homardRecette.png" ></ion-img>
     <p>Faites cuire les homards dans l'eau bouillante avec du thym, du laurier, du sel et du poivre de Cayenn. laissez cuire 20 minutes. Egouttez-les et laissez-les refoirdir
-      <br><br>Découpez es coffre des homards dans le sens de a longueur
+      <br><br>Découpez les coffre des homards dans le sens de a longueur.
       <br><br>Mélangez la mayonnase avec le cognac, le corail et la ciboulette ciselée
     </p>
 
