--- a/myApp/src/app/Page/Page_Recettes/recettexyz/recettexyz.page.html
+++ b/myApp/src/app/Page/Page_Recettes/recettexyz/recettexyz.page.html
@@ -6,7 +6,7 @@
   <div id="contenue">
     <h1>RecetteXYZ</h1>
     <ion-img src="../../assets/Recettes/poulpe@3x.png" ></ion-img>
-    <p>Qu'il est chaud le soleil<br>Quand nous sommes en vaccances
+    <p>Qu'il est chaud le soleil<br>Quand nous sommes en vacances
       <br>Y a d'la joie, des hirondelles
       <br>C'est le sud de la France
       <br>Papa bricole au garage
