--- a/myApp/src/app/Page/Page_Recettes/st-jacques/st-jacques.page.html
+++ b/myApp/src/app/Page/Page_Recettes/st-jacques/st-jacques.page.html
@@ -6,8 +6,8 @@
   <div id="contenue">
     <h1>Noix de Saint-Jacques <br>flambées au cognac</h1>
     <ion-img src="../../assets/Recettes/saintJacques.png" ></ion-img>
-    <p>Faire fondre du beurre avec des écgalotes puis ajouter les noix Saint-Jacques. Les faire revenir en laissant le milieu translucide puis les retirer du feu.
-    <br><br>Ajouter l'ail et le persil dans la poêle et laisser cuire quelques secondes. Bien faire chauffer la poêle, puis flamber au Cognac. Une fois la flamme éteinte, ajouter les noix de Saint-Jacques (il ne faut pas les flamber carelles perdraient leur saveur).
+    <p>Faire fondre du beurre avec des échalotes puis ajouter les noix Saint-Jacques. Les faire revenir en laissant le milieu translucide puis les retirer du feu.
+    <br><br>Ajouter l'ail et le persil dans la poêle et laisser cuire quelques secondes. Bien faire chauffer la poêle, puis flamber au Cognac. Une fois la flamme éteinte, ajouter les noix de Saint-Jacques (il ne faut pas les flamber car elles perdraient leur saveur).
       <br><br>Déguster chaud nature ou accompagné d'une fondue de poireaux.
     </p>
 
