--- a/myApp/src/app/bateau/bateau.page.html
+++ b/myApp/src/app/bateau/bateau.page.html
@@ -4,7 +4,7 @@
 <ion-content>
   
   <h1>Nos bateaux partenaires</h1>
-  <strong>Vente en direct de notre bateau<br>Produit selon la saison, Livraison sur Paris</strong>
+  <strong>Tous les eaux mènent à Thibault</strong>
   <p>06.63.99.99.78<br>lebateaudethibault@gmail.com<br>www.facebook/lebateaudethibault.com</p>
   <ion-grid>
 
