--- a/myApp/src/app/contact/contact.page.html
+++ b/myApp/src/app/contact/contact.page.html
@@ -8,7 +8,7 @@
     <div id="contenue2">
       <p>06.63.99.99.78<br>lebateaudethibault@gmail.com<br>www.facebook/lebateaudethibault.com</p>
     </div>
-    <p>Qu'il est chaud le soleil<br>Quand nous sommes en vaccances
+    <p>Qu'il est chaud le soleil<br>Quand nous sommes en vacances
       <br>Y a d'la joie, des hirondelles
       <br>C'est le sud de la France
       <br>Papa bricole au garage
