--- a/myApp/src/app/home/home.page.html
+++ b/myApp/src/app/home/home.page.html
@@ -22,7 +22,7 @@
       <ion-button id="produit" routerLink="/produit">
         <img  src="../../assets/logo/poisson.png" height="75%">
         <div id="text">
-          Produit et promotion
+          Produits et promotions
         </div>
       </ion-button>
       </ion-col>
@@ -52,7 +52,7 @@
         <ion-button size="6" expand='full' [routerLink]="['/recette']">
           <img  src="../../assets/logo/recette.png" height="75%">
             <div id="text">
-              Recette
+              Recettes
             </div>
           </ion-button>
       </ion-col>
