--- a/myApp/src/app/produit/produit.page.html
+++ b/myApp/src/app/produit/produit.page.html
@@ -35,7 +35,7 @@
 
   <ion-button routerLink="/poisson">
     <div id="text">
-      Poisson
+      Poissons
     </div>
   </ion-button>
 
@@ -53,7 +53,7 @@
 
   <ion-button routerLink="/promotion">
     <div id="text">
-      Promotion
+      Promotions
     </div>
   </ion-button>
 </ion-content>
